--- a/example/lord/Makefile.gp2x
+++ b/example/lord/Makefile.gp2x
@@ -1,6 +1,6 @@
 obj = example.o lord.o image_png.o
 bin = example
-lib = ../libGL_gp2x.a
+lib = ../../libGL_gp2x.a
 
 SDL_CONFIG = arm-linux-sdl-config
 
@@ -8,7 +8,7 @@ SDL_CONFIG = arm-linux-sdl-config
 opt = -mcpu=arm920t -O3 -ffast-math -fomit-frame-pointer
 
 CC = arm-linux-gcc
-CFLAGS = -std=gnu89 -pedantic -Wall $(opt) $(dbg) -I../src `$(SDL_CONFIG) --cflags` -I/usr/local/devkitPro/devkitGP2X/include/libpng12
+CFLAGS = -std=gnu89 -pedantic -Wall $(opt) $(dbg) -I../../src `$(SDL_CONFIG) --cflags` -I/usr/local/devkitPro/devkitGP2X/include/libpng12
 LDFLAGS = -lm -static `$(SDL_CONFIG) --libs` -lpng -lz -lpthread
 
 $(bin): $(obj) $(lib)
