--- a/Makefile.gp2x
+++ b/Makefile.gp2x
@@ -1,26 +1,25 @@
-obj :=
-lib := libGL_gp2x.a
+src = $(wildcard src/*.c)
+obj = $(src:.c=.o)
+lib = libGL_gp2x.a
 
-#dbg := -g
-opt := -mcpu=arm920t -O3 -ffast-math -fomit-frame-pointer
+#dbg = -g
+opt = -mcpu=arm920t -O3 -ffast-math -fomit-frame-pointer
 
-CC := arm-linux-gcc
-AR := arm-linux-ar
-CFLAGS := -Wall $(dbg) $(opt) -DHAVE_INLINE
+CC = arm-open2x-linux-gcc
+AR = arm-open2x-linux-ar
+CFLAGS = -Wall $(dbg) $(opt) -DHAVE_INLINE
 #-DDBG_USE_FLOAT
 
 ## if you get undefined symbols like uint32_t etc, and you know your
 ## compiler/C library has the stdint.h file, uncomment this line.
 # CFLAGS += -DHAVE_STDINT
 
-include src/makefile.part
-
 $(lib): $(obj)
 	$(AR) rcs $@ $(obj)
 
 .PHONY: example
 example:
-	cd example; make -f Makefile.gp2x
+	cd example; $(MAKE)
 
 -include $(obj:.o=.d)
 
